--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.8.3",
     "@babel/node": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -19,6 +20,7 @@
     "nodemon": "^2.0.2"
   },
   "devDependencies": {
+    "@babel/helper-compilation-targets": "^7.12.5",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-import": "^0.13.0"
