added code for email validation, not working yet

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "isemail": "^3.2.0",
     "mongoose": "^5.8.10",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "validator": "^13.5.2"
   },
   "devDependencies": {
     "@babel/helper-compilation-targets": "^7.12.5",
