--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "postinstall": "npm install --prefix backend"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.2"
+    "@material-ui/core": "^4.11.2",
+    "validator": "^13.5.2"
   }
 }
